# NUV-agent

./: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  run-mac.sh
.github/workflows/: release-publish.yml  release.yml
nuvion_app/: __init__.py  cli.py  config.py  config_template.env  docker-compose.yml  model_store.py
nuvion_app/agent/: __init__.py  triton_client.py  zsad_siglip_demo.py
nuvion_app/inference/: Dockerfile.inference  __init__.py  connectivity.py  main.py  pipeline.py  requirements-triton.txt  requirements-zsad.txt  requirements.txt  video_source.py  webrtc_signaling.py  webrtc_uplink.py  zero_shot.py
nuvion_app/runtime/: __init__.py  bootstrap.py  config_guard.py  docker_manager.py  errors.py  gstreamer_env.py  model_guard.py  platform_installer.py  triton_manager.py
packaging/: README.md
packaging/apt/: README.md  aptly.conf  install-apt.sh  publish-gcs.sh  publish.sh
packaging/deb/: build-deb.sh  postinst  prerm
packaging/homebrew/: nuv-agent.rb
packaging/release/: bootstrap-homebrew-tap.sh  build-sdist.sh  promote-model-pointer.sh  update-homebrew-formula.sh
packaging/systemd/: nuv-agent.service
tests/agent/: test_triton_client_config.py
tests/inference/: test_connectivity.py  test_video_source.py  test_webrtc_signaling.py  test_webrtc_uplink.py
tests/runtime/: test_bootstrap.py  test_cli_demo_mode.py  test_config_guard.py  test_config_loader.py  test_docker_manager.py  test_gstreamer_env.py  test_model_guard.py  test_model_store_selfheal.py  test_platform_installer.py  test_triton_manager.py
(+4 files in other folders)
